--- a/MAE/config.json
+++ b/MAE/config.json
@@ -13,6 +13,7 @@
         }
     },
     "data_loader": {
+        "_comment": "논문에선 4096 배치사이즈 사용",
         "type": "ImageNetDataLoader",
         "args":{
             "data_dir": "data/",
@@ -22,34 +23,35 @@
         }
     },
     "optimizer": {
-        "type": "Adam",
+        "type": "AdamW",
         "args":{
-            "lr": 0.001,
-            "weight_decay": 0,
-            "amsgrad": true
+            "lr": 0.00015,
+            "weight_decay": 0.05,
+            "betas" : [0.9, 0.95]
         }
     },
-    "loss": "nll_loss",
+    "lr_scheduler": {
+        "_comment": "논문에선 warmup_steps 40만 명시",
+        "type": "CosineAnnealingWarmupRestarts",
+        "args": {
+            "first_cycle_steps": 100,
+            "cycle_mult": 1.0,
+            "max_lr": 0.01,
+            "min_lr": 0.000001,
+            "warmup_steps": 40,
+            "gamma": 0.5
+        }
+    },
     "metrics": [
         "accuracy", "top_k_acc"
     ],
-    "lr_scheduler": {
-        "type": "StepLR",
-        "args": {
-            "step_size": 50,
-            "gamma": 0.1
-        }
-    },
     "trainer": {
         "epochs": 100,
-
         "save_dir": "saved/",
         "save_period": 1,
         "verbosity": 2,
-        
         "monitor": "min val_loss",
         "early_stop": 10,
-
         "tensorboard": true
     }
 }
